# solana-copy-bot

./: .env.example  .gitignore  Cargo.toml  README.md
config/: default.toml
src/: main.rs
src/classifier/: mod.rs
src/executor/: mod.rs
src/extractor/: mod.rs
src/ingestion/: mod.rs
src/models/: mod.rs
src/strategy/: mod.rs
src/telegram/: mod.rs
src/telemetry/: mod.rs
src/utils/: mod.rs
