[package]
name = "solana-copy-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime (alta performance)
tokio = { version = "1.36", features = ["full"] }

# Solana Core (Alinhado ao Agave 2.0.15)
solana-client = "~2.0.15"
solana-sdk = "~2.0.15"

# Serialization & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
config = "0.14"

# Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3.32"
solana-rpc-client-api = "~2.0.15"
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.3"
rusqlite = { version = "0.30", features = ["bundled"] }
